[tool.poetry]
name = "pyproject-toml"
version = "3.12"
description = ""
authors = ["vgoh"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.3"
matplotlib = "^3.10.8"
pandas = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
